Refactor the logging system for ensuring the log of actions by authenticated identity in the message.
Signed-off-by: Stéphane Galland <galland@arakhne.org>